--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^11.0.5",
     "gsap": "^3.12.5",
     "lucide-react": "^0.344.0",
+    "next": "^15.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.161.0"
